@@ -220,6 +220,16 @@
      'attribute (list "bgcolor" bgcolor)
      'attribute (list "text" textcolor)
      'attribute (list "link" linkcolor))
+;;;;
+;;;;
+;;;;
+    (gnc:html-document-set-style!
+     ssdoc "number-header"
+     'tag "th"
+     'attribute (list "align" "right"))
+;;;;
+;;;;
+;;;;
 
     (gnc:html-document-set-style!
      ssdoc "number-cell"
